[package]
name = "tuppipe"
version = "0.1.1"
authors = ["David d.H."]
edition = "2021"
description = "A simple pipe operator-like implementation using tuples in Rust."
documentation = "https://docs.rs/tuppipe"
homepage = "https://github.com/david-d-h/tuppipe"
repository = "https://github.com/david-d-h/tuppipe"
license = "MIT"
keywords = ["pipe-operator", "pipe", "pipeop", "pipe-op"]

[dependencies]
paste = "1.0"
